# learning-python

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml
src/exercise/01/: 01.README.md  01.py
src/exercise/02/: 02.py  README.md
