[tool.poetry]
name = "learning-python"
version = "0.1.0"
description = "Exercises for learning Python"
authors = ["Casey Baggz <caseybaggz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
