[tool.poetry]
name = "learning-python"
version = "0.1.0"
description = "Exercises for learning Python"
authors = ["Casey Baggz <caseybaggz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
